# SemaltPars

./: SA_ALT_product_list_2025-08-16_192805.csv  SA_ALT_product_list_2025-08-16_230100.csv  SA_ALT_product_list_2025-08-22_220820.csv  SA_MSK_product_list.csv  SA_MSK_product_list_2025-08-11_190122.csv  SA_MSK_product_list_2025-08-16_140138.csv  SA_MSK_product_list_2025-08-22_182034.csv  SA_MSK_product_list_2025-08-22_200107.csv  css_cls.txt  exceptions.txt  ouf.txt  product_list.json  pyproject.toml
collected_data_csv/: SA_ALT_product_list_2025-08-30_124213.csv  SA_ALT_product_list_2025-09-06_130006.csv  SA_ALT_product_list_2025-11-22_112443.csv  SA_ALT_product_list_2026-03-02_230244.csv  SA_ALT_product_list_2026-03-09_135024.csv  SA_ALT_product_list_2026-03-10_222105.csv  SA_MSK_product_list_2025-08-30_123632.csv  SA_MSK_product_list_2025-09-06_125648.csv  SA_MSK_product_list_2025-11-22_112238.csv  SA_MSK_product_list_2026-03-02_225716.csv  SA_MSK_product_list_2026-03-09_134426.csv  SA_MSK_product_list_2026-03-10_221507.csv
src/: main.py  sa_alt_parser.py  sa_msk_parser.py  tests.py
